[package]
name = "oxixenon"
version = "1.2.1"
authors = ["Roberto Frenna <robertof.public@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
toml = "0.5"
http = { version = "0.2", optional = true }
hmac = { version = "*", optional = true }
sha2 = { version = "*", optional = true }
clap = { version = "*", default-features = false }
md5 = { version = "*", optional = true }
chrono = "0.4"
log = "0.4"
fern = "0.6"
error-chain = "0.12"

[target.'cfg(windows)'.dependencies]
winrt = { version = "0.5", features = ["windows-data", "windows-ui"], optional = true }

[target.'cfg(not(windows))'.dependencies]
syslog = { version = "5.0", optional = true }

[features]
default = ["client", "server"]
# Logging backends
syslog-backend = ["syslog", "fern/syslog-4"]
# Client features
client = []
client-toasts = ["client", "winrt"]
# Server features
server = []
# Internal features
http-client = ["http"]
# Renewers
renewer-dlink = ["server", "http-client", "hmac", "sha2"]
renewer-fritzbox-local = ["server"]
renewer-fritzbox = ["server", "http-client", "md5"]
